@@ -96,7 +96,6 @@ setifconfig()
 			-b \
 			-i "count(wep/enable) = 0" -o " wepmode off" -b \
 			-i "count(wpa/enable) > 0" -o " WPA" -b \
-			-o " up" \
 		-b \
 		-i "starts-with(if,'vlan')" \
 			-m "//vinterfaces/vlan[if = '${_ifn}']" \
@@ -166,7 +165,6 @@ setifconfig()
 					-b \
 					-i "count(wep/enable) = 0" -o " wepmode off" -b \
 					-i "count(wpa/enable) > 0" -o " WPA" -b \
-					-o " up" \
 				-b \
 				-i "starts-with(if,'vlan')" \
 					-m "//vinterfaces/vlan[if = '${_ifn}']" \
@@ -238,6 +236,18 @@ setifconfig()
 			_laggport_args="up"
 			[ -n "${_laggport_mtu}" ] && _laggport_args="${_laggport_args} mtu ${_laggport_mtu}"
 			[ -n "${_laggport}" ] && eval /usr/local/sbin/rconf attribute set "ifconfig_${_laggport}" "${_laggport_args}"
+		done
+
+	# wlan interfaces
+	/usr/local/bin/xml sel -t \
+		-m "//vinterfaces/wlan" \
+			-v if \
+			-v "concat(' ',wlandev)" \
+			-n \
+		-b \
+		${configxml_file} | /usr/local/bin/xml unesc | \
+		while read _wlan _wlandev _wlan_args; do
+			[ -n "${_wlan}" ] && eval /usr/local/sbin/rconf attribute set "wlans_${_wlandev}" "${_wlan}"
 		done
 
 	# prepare bridge/carp interfaces
